fixed overflow on about page

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -288,7 +288,7 @@ body{
     left:0;
     top:55px;
     z-index: -1;
-    overflow-y: hidden;
+    overflow: hidden;
 
     @media screen and (max-width:990px) {
         background-size: auto 130%;
